# VINS-Fusion

./: README.md
camera_models/: CMakeLists.txt  package.xml
config/: vins_rviz_config.rviz
config/euroc/: euroc_mono_imu_config.yaml
global_fusion/: CMakeLists.txt  loop_fusion.code-workspace  package.xml
global_fusion/src/: globalOpt.cpp  globalOpt.h  globalOptNode.cpp
loop_fusion/: CMakeLists.txt  loop_fusion.code-workspace  package.xml
loop_fusion/src/: keyframe.cpp  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
loop_fusion/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  marginalization_factor.cpp  marginalization_factor.h
vins_estimator/src/featureTracker/: feature_tracker.cpp
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h
vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  visualization.cpp  visualization.h
