<?xml version="1.0"?>
<package format="3">
  <name>loop_fusion</name>
  <version>0.0.0</version>
  <description>loop_fusion package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tony-ws@todo.todo">tony-ws</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>camera_models</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>