<?xml version="1.0"?>
<package format="3">
  <name>vins</name>
  <version>0.0.0</version>
  <description>The vins package</description>
  <maintainer email="qintonguav@gmail.com">qintong</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>camera_models</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>image_transport</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
